fix: last card and spacing wrapper

--- a/src/components/cards/card.scss
+++ b/src/components/cards/card.scss
@@ -363,3 +363,6 @@ $card-header-shadow: none;
         }
     }
 }
+.project-index {
+    width: 400px;
+}
